--- a/index.html
+++ b/index.html
@@ -15,22 +15,21 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>ArcticFoxes <button onclick="location.href='https://app.arcticfoxes.net'" type="button">Web Client</button></h1>
-				<p>This is a small Matrix homeserver for cool nerds to hang around.</p>
-				<p><strong>Rules</strong>: Do not post illegal materials, spam, or harrass other people.</p>
+				<h1>ArcticFoxes <button onclick="location.href='https://element.arcticfoxes.net'" type="button">Matrix</button> <button onclick="location.href='https://invite.arcticfoxes.net'" type="button">Matrix.to</button> <button onclick="location.href='https://signal.tube/#virgo.arcticfoxes.net'" type="button">Signal Proxy</button> <button onclick="location.href='https://onc.arcticfoxes.net'" type="button">ONC Converter</button></h1>
+				<p>ArcticFoxes is a couple of self hosted services and a small Matrix homeserver for cool nerds to hang around.</p>
+				<p><strong>Rules</strong>: Do not post illegal materials, spam, harrass other people, or plan cyber attacks.</p>
 				<p><strong>Privacy</strong>: We do not sell your data to third parties. However, we do have the data that every Matrix homeserver operator has access to, including but not limited to your IP address, your contacts, which rooms you are in, etc. We reserve the right to forward criminal activities to relevant authorities and comply with lawful requests where there is legal basis.</p>
-				<p><strong>Hosting</strong>: The server runs on our own hardware with drive encryption and colocated in the UK. Static pages are hosted on <a href="https://netlify.com">Netlify</a>, but anything involving your private data such as the <a href="https://app.arcticfoxes.net">Element web client</a> or the <a href="https://matrix.arcticfoxes.net">API endpoints</a> are not behind their reverse proxy.</p>
+				<p><strong>Hosting</strong>: The Matrix server, <a href="https://element.arcticfoxes.net">Element client</a>, TURN server and <a href="https://signal.tube/#virgo.arcticfoxes.net">Signal Proxy</a> run on our own hardware with drive encryption and colocated in the UK. The <a href="https://onc.arcticfoxes.net/">ONC Converter</a> and landing page are hosted on <a href="https://pages.cloudflare.com/">Cloudflare Pages</a>.</p>
 			</header>
 
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="mailto:contact@arcticfoxes.net" class="icon fa-envelope"><span class="label">Email</span></a></li>
-					<li><a href="https://github.com/tommytran732/arcticfoxes.net" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="mailto:contact@tommytran.io" class="icon fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="https://github.com/arcticfoxes-net" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; ArcticFoxes.net.</li>
-					<li><a href="https://tommytran.io/gpg.asc">PGP Key</a>.</li>
 					<li>Website designed by <a href="https://html5up.net">HTML5 UP</a>.</li>
 					<li>Backgrounds from <a href="https://unsplash.com/s/photos/arctic-fox">Unsplash</a>.</li>
 				</ul>
