Update website info
Signed-off-by: Tommy <contact@tommytran.io>

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<p>ArcticFoxes is a couple of self hosted services and a small Matrix homeserver for cool nerds to hang around.</p>
 				<p><strong>Rules</strong>: Do not post illegal materials, spam, harrass other people, or plan cyber attacks.</p>
 				<p><strong>Privacy</strong>: We do not sell your data to third parties. However, we do have the data that every Matrix homeserver operator has access to, including but not limited to your IP address, your contacts, which rooms you are in, etc. We reserve the right to forward criminal activities to relevant authorities and comply with lawful requests where there is legal basis.</p>
-				<p><strong>Hosting</strong>: The Matrix server, <a href="https://element.arcticfoxes.net">Element client</a>, TURN server and <a href="https://signal.tube/#virgo.arcticfoxes.net">Signal Proxy</a> run on our own hardware with drive encryption and colocated in the UK. The <a href="https://onc.arcticfoxes.net/">ONC Converter</a> and landing page are hosted on <a href="https://pages.cloudflare.com/">Cloudflare Pages</a>.</p>
+				<p><strong>Hosting</strong>: The Matrix server and <a href="https://element.arcticfoxes.net">Element client</a> are hosted with Hetzner in Germany. The <a href="https://signal.tube/#virgo.arcticfoxes.net">Signal Proxy</a> runs on our own hardware with drive encryption and colocated in the UK. The <a href="https://onc.arcticfoxes.net/">ONC Converter</a> and landing page are hosted on <a href="https://pages.cloudflare.com/">Cloudflare Pages</a>.</p>
 			</header>
 
 		<!-- Footer -->
