--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<h1>ArcticFoxes <button onclick="location.href='https://element.arcticfoxes.net'" type="button">Matrix</button> <button onclick="location.href='https://invite.arcticfoxes.net'" type="button">Matrix.to</button> <button onclick="location.href='https://signal.tube/#virgo.arcticfoxes.net'" type="button">Signal Proxy</button> <button onclick="location.href='https://onc.arcticfoxes.net'" type="button">ONC Converter</button></h1>
-				<p><strong>The ArcticFoxes Matrix server is currently down while additional storage is added.</strong> Any future updates will be posted to this page.</p>
+				<p>The Matrix server is currently running slowly due to backfilling, but it is available for use.</p>
 				<p>ArcticFoxes is a couple of self hosted services and a small Matrix homeserver for cool nerds to hang around.</p>
 				<p><strong>Rules</strong>: Do not post illegal materials, spam, harrass other people, or plan cyber attacks.</p>
 				<p><strong>Privacy</strong>: We do not sell your data to third parties. However, we do have the data that every Matrix homeserver operator has access to, including but not limited to your IP address, your contacts, which rooms you are in, etc. We reserve the right to forward criminal activities to relevant authorities and comply with lawful requests where there is legal basis.</p>
