Temporarily remove migration message
Signed-off-by: wj25czxj47bu6q <96372288+wj25czxj47bu6q@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<h1>ArcticFoxes <button onclick="location.href='https://element.arcticfoxes.net'" type="button">Matrix</button> <button onclick="location.href='https://invite.arcticfoxes.net'" type="button">Matrix.to</button></h1>
-				<p style="color: red; font-weight: bold">The ArcticFoxes.net Matrix homeserver will move to a new hosting provider soon. Downtime of up to a week is expected for the migration. Check back soon for exact dates.</p>
+				<!--<p style="color: red; font-weight: bold">The ArcticFoxes.net Matrix homeserver will move to a new hosting provider soon. Downtime of up to a week is expected for the migration. Check back soon for exact dates.</p>-->
 				<p><strong>Rules</strong>: Do not post illegal materials, spam, harrass other people, or plan cyber attacks. <em>Legality is determined by the laws of the United States, Canada, and Germany.</em></p>
 				<p><strong>Privacy</strong>: We do not sell your data to third parties. However, we do have the data that every Matrix homeserver operator has access to, including but not limited to your IP address, your contacts, which rooms you are in, etc. We reserve the right to forward criminal activities to relevant authorities and comply with lawful requests where there is legal basis.</p>
 				<p><strong>Hosting</strong>: The Matrix server and <a href="https://element.arcticfoxes.net">Element client</a> are hosted on a dedicated server with Hetzner in Germany. The <a href="https://signal.tube/#virgo.arcticfoxes.net">Signal Proxy</a> runs on our own hardware with drive encryption and colocated in the UK. The <a href="https://onc.arcticfoxes.net/">ONC Converter</a> and landing page are hosted on <a href="https://pages.cloudflare.com/">Cloudflare Pages</a>.</p>
@@ -40,3 +40,4 @@
 
 	</body>
 </html>
+
